changed header and added public to gitignore

--- a/themes/crypto.amsterdam/layouts/index.html
+++ b/themes/crypto.amsterdam/layouts/index.html
@@ -12,7 +12,7 @@
       {{ partial "menu.html" . }}
     </div>
 
-    <p class="intro text"> We are Crypto Amsterdam </p>
+    <p class="intro text"> crypto.amsterdam </p>
 
     {{ .Content }}
 
